rendered/envs/alpha/speedtest/service-speedtest.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    a8r.io/repository: git@github.com:Zebradil/myks-homelab.git
  name: speedtest
spec:
  ports:
    - name: http
      port: 80
  selector:
    app.kubernetes.io/name: speedtest
