rendered/envs/alpha/speedtest/ingress-speedtest.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    a8r.io/repository: git@github.com:Zebradil/myks-homelab.git
  name: speedtest
spec:
  rules:
    - host: speedtest.junior.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: speedtest
                port:
                  name: http
            path: /
            pathType: Prefix
